[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
helper = { path = "../helper" }
application = { path = "../application" }
openapi = { version = "1.0.0", path = "../openapi" }
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-trait = "0.1.68"
log = "0.4.17"
futures = "0.3.27"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
time = "0.3.20"
chrono = "0.4.24"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
tower-http = { version = "0.4.0", features= ["full"] }
tower = "0.4.13"
num-traits = "0.2.15"
axum = { version = "0.6.12", features = ["ws", "headers"] }
cookie = { version = "0.17.0", features = ["percent-encode"] }
mime = "0.3.17"
sqlx = { version = "0.6.3", features = [ "macros", "chrono", "runtime-tokio-rustls" , "mysql" ]  }
sea-query = { version = "0.28.3", features = ["backend-mysql", "derive", "with-chrono", "thread-safe"]}
sea-query-binder = {version = "0.3.0", features = ["sqlx-mysql", "with-chrono"]}
redis = { version = "0.22.3", features = ["tokio", "tokio-comp", "cluster", "serde"] }
bb8-redis = "0.12.0"
derive-new = "0.5.9"
rusoto_core = "0.48.0"
rusoto_sesv2 = "0.48.0"
rusoto_ssm = "0.48.0"
rusoto_s3 = "0.48.0"
clap = { version = "4.1.13", features = ["derive"] }
marker-blanket = "0.1.0"
blanket = "0.2.0"
trait-set = "0.3.0"
