[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
uuid = { version = "1.3.0", features = ["v4"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
chrono = "0.4.24"
chrono-tz = "0.8.1"
ulid = "1.0.0"
base62 = "2.0.2"
sha2 = "0.10.6"
